# cimple

./: CMakeLists.txt  LICENSE  conanfile.txt
cmake/: provider.cmake
headers/: CMakeLists.txt  cimple_build.hpp  cimple_build_pkg.hpp  cimple_cmd.hpp  cimple_config.hpp  cimple_constants.hpp  cimple_diagnostics.hpp  cimple_ninja.hpp  cimple_oci.hpp  cimple_pkg_config.hpp  cimple_requests.hpp  cimple_tar.hpp  cimple_util.hpp
oci/: windows-x86_64-bootstrap.dockerfile
src/: CMakeLists.txt  cimple.cpp  cimple_build.cpp  cimple_build_pkg.cpp  cimple_cmd.cpp  cimple_config.cpp  cimple_diagnostics.cpp  cimple_ninja.cpp  cimple_oci.cpp  cimple_pkg_config.cpp  cimple_requests.cpp  cimple_tar.cpp  cimple_util.cpp
tests/: CMakeLists.txt  basic.cpp  pkg_basic.cpp  test_util.cpp  test_util.hpp
tests/alternate_paths/my_src/: main.cpp  test.cpp  test.hpp
tests/basic/: cimple.toml
tests/basic/src/: main.cpp
tests/build_tests/: basic.cpp  build_test_util.cpp  build_test_util.hpp
tests/build_tests/alternate_paths/: cimple.toml
tests/build_tests/basic/: cimple.toml
tests/build_tests/external_libs/: cimple.toml
tests/build_tests/external_libs/src/: main.cpp
tests/build_tests/libs/lib/a/src/: a.cpp
tests/build_tests/libs/lib/b/headers/: b.hpp
tests/build_tests/libs/src/: main.cpp
tests/libs/: cimple.toml
tests/libs/lib/a/headers/: a.hpp
tests/libs/lib/b/src/: b.cpp
tests/pkg_tests/: basic.cpp  pkg_test_util.cpp  pkg_test_util.hpp
tests/pkg_tests/basic/: pkg.lua  pkg.toml
